# ITI-Embedded-Linux

Task-2_V-SDCard/: Task-2.MD
Task-3_U-boot/: Task-3.md
Task-4_blink_U-boot/: CMakeLists.txt  README.md  aarch64-rpi3-toolchain.cmake  linker.ld  main.c  startup.s
uboot-script/: u-boot-scripting.md  uboot-script.txt
